# vim

./: .pylintrc  GlobalVars.py  LICENSE  README.md  exceptions.py  install.py  monokai_custom.vim  pyproject.toml  vimrc
Posix/: cpp.py  formatters_linters.py  posixInstaller.py  posixTools.py  python.py
configs/: .clang-format  .ideavimrc  .pylintrc  .vimrc  .ycm_extra_conf.py  short.vimrc
data/smth_usefull/: cpp.sh  functions.vim
data/tools_configs/: .clang-format  .pylintrc  .ycm_extra_conf.py
data/tools_configs/vimspector_configs/cpp/: my_configuration.json
data/tools_configs/vimspector_configs/javascript/: my_configuration.json
data/tools_configs/ycm_config/: .ycm_extra_conf.py  common.py  cpp.py
data/vimrc_configs/: .vimrc  short.vimrc
data/vimrc_configs/plugin/: setup.vim
data/vimrc_configs/settings/: functions.vim  mappings.vim  shortcuts.vim
data/ycm/: .ycm_extra_conf.py  TCompleterContext.py
data/ycm/completers/: ICompleter.py  TCppCompleter.py  TPythonCompleter.py  __init__.py  interface.py
data/ycm/path_utils/: __init__.py  node_finder.py
scripts/: cpp.sh
smth_usefull/: functions.vim  vimspector_cpp.json
ui/: codedark.vim  monokai_custom.vim  vim_icon.icns
vim_installer/: .pylintrc  VimInstaller.py  __init__.py  __main__.py
vim_installer/tools/: __init__.py  common.py  common_tools.py  main.py  posix_tools.py
vimspector_configs/cpp/: my_configuration.json
vimspector_configs/python/: my_configuration.json
